# Simple_SfM

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
config/: 3dii.yaml  default.yaml
include/core/: CMakeLists.txt  SfM.h
include/core/config/: snu_34.yaml
include/core/include/core/: SfM.h
include/core/include/types/: Common.h  MapPoint.h
include/core/src/core/: SfM.cpp
include/core/src/types/: Feature.cpp
include/core/src/utils/: Config.cpp
include/factor/: Factor.h
include/types/: Camera.h  Feature.h  Frame.h  Map.h
include/utils/: Config.h  Viewer.h
src/: CMakeLists.txt  Config.cpp
src/core/: SfM.cpp
src/types/: Camera.cpp  Frame.cpp  Map.cpp  MapPoint.cpp
src/utils/: Viewer.cpp
